[SOIN] Formatte le fichier accueil2.html

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -7,10 +7,10 @@ permalink: /accueil2/
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <hgroup>
-      <h1 class="alternatif-xs">Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
-      <p class="texte-chapo-xl">
-        Agissez pour votre cybersécurité !
-      </p>
+      <h1 class="alternatif-xs">
+        Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber
+      </h1>
+      <p class="texte-chapo-xl">Agissez pour votre cybersécurité !</p>
     </hgroup>
     <lab-anssi-lien
       href="/cyberdepart/"
@@ -19,10 +19,11 @@ permalink: /accueil2/
       taille="lg"
       titre="Demander un diagnostic gratuit"
     ></lab-anssi-lien>
-    <img src="/assets/images/image-generique.avif">
-    <p class="texte-detail-sm">Découvrez les guides, services et outils gratuits proposés par l'Agence nationale de la
-      sécurité des systèmes
-      d'information et ses partenaires</p>
+    <img src="/assets/images/image-generique.avif" />
+    <p class="texte-detail-sm">
+      Découvrez les guides, services et outils gratuits proposés par l'Agence
+      nationale de la sécurité des systèmes d'information et ses partenaires
+    </p>
   </div>
 </section>
 
@@ -36,11 +37,16 @@ permalink: /accueil2/
   <div class="contenu-section">
     <div class="toutes-organisations">
       <hgroup>
-        <h2>Toutes les organisations sont concernées par le risque de cyberattaques</h2>
-        <p class="texte-article-lg">Les TPE/PME/ETI et collectivités sont les principales victimes des ransomwares ou
-          rançongiciels.</p>
+        <h2>
+          Toutes les organisations sont concernées par le risque de
+          cyberattaques
+        </h2>
+        <p class="texte-article-lg">
+          Les TPE/PME/ETI et collectivités sont les principales victimes des
+          ransomwares ou rançongiciels.
+        </p>
       </hgroup>
-      <img src="/assets/images/illustration-organisations-concernees.svg">
+      <img src="/assets/images/illustration-organisations-concernees.svg" />
       <lab-anssi-lien
         class="texte-mention-xs"
         href="https://cyber.gouv.fr/nous-connaitre/publications/panoramas-de-la-cybermenace/panorama-de-la-cybermenace-2024/"
@@ -50,35 +56,49 @@ permalink: /accueil2/
         titre="Panorama de la menace 2024, ANSSI"
       ></lab-anssi-lien>
     </div>
-    <div id="demande-diagnostic">
-    </div>
+    <div id="demande-diagnostic"></div>
     <div class="acces-catalogue">
-      <h2>Accédez à un catalogue complet de ressources cyber proposées par l'ANSSI et ses partenaires</h2>
+      <h2>
+        Accédez à un catalogue complet de ressources cyber proposées par l'ANSSI
+        et ses partenaires
+      </h2>
       <div class="selections">
-        <p class="texte-detail-sm">Les sélections de l’ANSSI pour vous accompagner</p>
+        <p class="texte-detail-sm">
+          Les sélections de l’ANSSI pour vous accompagner
+        </p>
         <div class="caroussel-selections">
-          <dsfr-card title="Se lancer en cyber"
-                     description="Des services et ressources pour vous aider à mettre en œuvre des premières actions concrètes pour commencer à renforcer sa cybersécurité."
-                     href="/parcours-debuter"
-                     src="/assets/images/marelle-avec-bulle-fond-jaune.svg"></dsfr-card>
-          <dsfr-card title="Approfondir vos efforts"
-                     description="Des services et ressources pour aider votre organisation à approfondir la démarche de renforcement de la cybersécurité."
-                     href="/parcours-approfondir"
-                     src="/assets/images/jumelles-avec-bulle-fond-jaune.svg"></dsfr-card>
-          <dsfr-card title="Vous accompagner avec NIS2"
-                     description="Des services et ressources pouvant accompagner les entités régulées par la directive."
-                     href="/nis2"
-                     src="/assets/images/directive-nis2-avec-bulle-fond-jaune.svg"></dsfr-card>
-
+          <dsfr-card
+            title="Se lancer en cyber"
+            description="Des services et ressources pour vous aider à mettre en œuvre des premières actions concrètes pour commencer à renforcer sa cybersécurité."
+            href="/parcours-debuter"
+            src="/assets/images/marelle-avec-bulle-fond-jaune.svg"
+          ></dsfr-card>
+          <dsfr-card
+            title="Approfondir vos efforts"
+            description="Des services et ressources pour aider votre organisation à approfondir la démarche de renforcement de la cybersécurité."
+            href="/parcours-approfondir"
+            src="/assets/images/jumelles-avec-bulle-fond-jaune.svg"
+          ></dsfr-card>
+          <dsfr-card
+            title="Vous accompagner avec NIS2"
+            description="Des services et ressources pouvant accompagner les entités régulées par la directive."
+            href="/nis2"
+            src="/assets/images/directive-nis2-avec-bulle-fond-jaune.svg"
+          ></dsfr-card>
         </div>
       </div>
       <p class="texte-chapo-xl">
-        Explorez l’ensemble du catalogue et trouvez facilement <strong>les services et guides de l’ANSSI
-        adaptés</strong> aux besoins de
-        votre organisation.
+        Explorez l’ensemble du catalogue et trouvez facilement
+        <strong>les services et guides de l’ANSSI adaptés</strong> aux besoins
+        de votre organisation.
       </p>
-      <lab-anssi-lien href="/catalogue" apparence="bouton" variante="secondaire" taille="md"
-                      titre="Accéder au catalogue"></lab-anssi-lien>
+      <lab-anssi-lien
+        href="/catalogue"
+        apparence="bouton"
+        variante="secondaire"
+        taille="md"
+        titre="Accéder au catalogue"
+      ></lab-anssi-lien>
     </div>
   </div>
 </section>
