Affiche les cartes dans un carrousel

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -66,7 +66,7 @@ permalink: /accueil2/
         <p class="texte-detail-sm">
           Les sélections de l’ANSSI pour vous accompagner
         </p>
-        <div class="caroussel-selections">
+        <lab-anssi-carrousel-tuiles>
           <dsfr-card
             title="Se lancer en cyber"
             description="Des services et ressources pour vous aider à mettre en œuvre des premières actions concrètes pour commencer à renforcer sa cybersécurité."
@@ -85,7 +85,7 @@ permalink: /accueil2/
             href="/nis2"
             src="/assets/images/directive-nis2-avec-bulle-fond-jaune.svg"
           ></dsfr-card>
-        </div>
+        </lab-anssi-carrousel-tuiles>
       </div>
       <p class="texte-chapo-xl">
         Explorez l’ensemble du catalogue et trouvez facilement
