Affiche le récapitulatif des tests de maturité

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -102,3 +102,21 @@ permalink: /accueil2/
     </div>
   </div>
 </section>
+
+<section class="test-maturite">
+  <div class="recapitulatif">
+    <hgroup>
+      <h2>Quelle est la maturité cyber de votre organisation&nbsp;?</h2>
+      <p class="texte-standard-md">
+        La maturité cyber correspond au niveau global de prise en compte des
+        risques numériques dans votre organisation.
+        <br />
+        <br />
+        ⏱️
+        <strong>5 min. seulement pour obtenir une évaluation indicative</strong>
+        et voir où vous vous situez par rapport aux autres organisations ayant
+        déjà réalisé le test de maturité cyber.
+      </p>
+    </hgroup>
+  </div>
+</section>
