Dirige vers le test de maturité

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -118,5 +118,14 @@ permalink: /accueil2/
         déjà réalisé le test de maturité cyber.
       </p>
     </hgroup>
+    <lab-anssi-lien
+      href="/test-maturite"
+      apparence="bouton"
+      variante="primaire"
+      taille="md"
+      titre="Débuter le test"
+      position-icone="droite"
+      icone="arrow-right-line"
+    ></lab-anssi-lien>
   </div>
 </section>
