Dirige vers les tests en session de groupe

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -127,5 +127,11 @@ permalink: /accueil2/
       position-icone="droite"
       icone="arrow-right-line"
     ></lab-anssi-lien>
+    <lab-anssi-lien
+      id="lien-session-groupe"
+      href="/session-groupe"
+      apparence="lien"
+      titre="Disponible aussi pour les sessions en groupe"
+    ></lab-anssi-lien>
   </div>
 </section>
