--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -155,3 +155,51 @@ permalink: /accueil2/
     </div>
   </div>
 </section>
+
+<section class="interlocuteurs">
+  <h2>
+    Trouvez les interlocuteurs et dispositifs pour vous soutenir dans vos
+    efforts.
+  </h2>
+  <lab-anssi-carrousel-tuiles>
+    <dsfr-tile
+      title="Contacts cyber"
+      has-description="true"
+      description="Des contacts cyber de proximité pour vous orienter et répondre à vos questions."
+      href="/contacts"
+      enlarge="true"
+    >
+      <img
+        slot="pictogram"
+        src="/assets/images/trois-mains-croisees.svg"
+        alt="Contacts cyber"
+      />
+    </dsfr-tile>
+    <dsfr-tile
+      title="Prestataires labellisés"
+      has-description="true"
+      description="Tous les prestataires de confiance et produits/services labellisés afin de vous accompagner sur vos différents enjeux cyber : audits, homologations, réponses à incidents..."
+      href="/prestataires-labellises"
+      enlarge="true"
+    >
+      <img
+        slot="pictogram"
+        src="/assets/images/illustration-filtre-besoins-tous.svg"
+        alt="Prestataires labellisés"
+      />
+    </dsfr-tile>
+    <dsfr-tile
+      title="Financements cyber"
+      has-description="true"
+      description="Bénéficiez d’aides et de subventions pour renforcer la maturité cyber de votre organisation.  "
+      href="/financements"
+      enlarge="true"
+    >
+      <img
+        slot="pictogram"
+        src="/assets/images/pile-de-pieces.svg"
+        alt="Financements cyber"
+      />
+    </dsfr-tile>
+  </lab-anssi-carrousel-tuiles>
+</section>
