Ajoute les bizdev

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -203,3 +203,28 @@ permalink: /accueil2/
     </dsfr-tile>
   </lab-anssi-carrousel-tuiles>
 </section>
+
+<section class="equipe-bizdev">
+  <div class="contenu-section">
+    <div class="photos">
+      <img
+        src="/assets/images/floriane-bizdev.jpg"
+        alt="Photo de Floriane Gallego"
+      />
+    </div>
+    <h2>Notre équipe est à votre écoute</h2>
+    <p class="texte-standard-md">
+      Participer à un webinaire collectif de 45 minutes pour en savoir plus sur
+      MesServicesCyber, le test de maturité et le diagnostic cyber afin de mieux
+      protéger votre entité des cyberattaques.
+    </p>
+    <lab-anssi-lien
+      href="https://app.livestorm.co/lab-anssi/webinaire-cyberdepart"
+      variante="primaire"
+      apparence="bouton"
+      taille="lg"
+      cible="_blank"
+      titre="Assister au webinaire"
+    ></lab-anssi-lien>
+  </div>
+</section>
