Ajoute l'invitation à rejoindre la communauté MSC

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -228,3 +228,40 @@ permalink: /accueil2/
     ></lab-anssi-lien>
   </div>
 </section>
+
+<section class="communaute-msc">
+  <div class="contenu-section">
+    <h2>Rejoignez la communauté&nbsp;!</h2>
+    <div class="contenu">
+      <p class="texte-standard-md">
+        En tant que <b>membre de la communauté</b>, vous pourrez&nbsp;:
+      </p>
+      <ul>
+        <li>
+          <b>Échanger</b> directement avec vos pairs pour une collaboration
+          facilitée.
+        </li>
+        <li>
+          <b>Découvrir</b> en avant-première les nouvelles fonctionnalités à
+          venir.
+        </li>
+        <li>
+          <b>Participer</b> activement au développement de MesServicesCyber en
+          nous partageant vos besoins et suggestions d’amélioration.
+        </li>
+      </ul>
+    </div>
+    <lab-anssi-lien
+      href="https://tally.so/r/wa6o22"
+      cible="_blank"
+      variante="secondaire"
+      apparence="bouton"
+      taille="md"
+      titre="Rejoindre la communauté"
+    ></lab-anssi-lien>
+    <img
+      src="assets/images/illustration-s-informer.svg"
+      alt="Dialoguer avec la communauté"
+    />
+  </div>
+</section>
