Répare la largeur maximale de certaines sections

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -110,98 +110,104 @@ permalink: /accueil2/
 </section>
 
 <section class="test-maturite">
-  <div class="recapitulatif">
-    <hgroup>
-      <h2>Quelle est la maturité cyber de votre organisation&nbsp;?</h2>
-      <p class="texte-standard-md">
-        La maturité cyber correspond au niveau global de prise en compte des
-        risques numériques dans votre organisation.
-        <br />
-        <br />
-        ⏱️
-        <strong>5 min. seulement pour obtenir une évaluation indicative</strong>
-        et voir où vous vous situez par rapport aux autres organisations ayant
-        déjà réalisé le test de maturité cyber.
-      </p>
-    </hgroup>
-    <lab-anssi-lien
-      href="/test-maturite"
-      apparence="bouton"
-      variante="primaire"
-      taille="md"
-      titre="Débuter le test"
-      position-icone="droite"
-      icone="arrow-right-line"
-    ></lab-anssi-lien>
-    <lab-anssi-lien
-      id="lien-session-groupe"
-      href="/session-groupe"
-      apparence="lien"
-      titre="Disponible aussi pour les sessions en groupe"
-    ></lab-anssi-lien>
-    <p class="texte-mention-xs">
-      La maturité cyber n’est pas une évaluation du niveau de sécurité des
-      systèmes d’information d’une organisation.
-    </p>
-    <div class="barometre">
+  <div class="contenu-section">
+    <div class="recapitulatif">
       <hgroup>
-        <h6>Baromètre de la maturité cyber</h6>
-        <p class="texte-detail-sm">
-          Répartition de la maturité cyber des organisations sur l’ensemble des
-          tests réalisés.
+        <h2>Quelle est la maturité cyber de votre organisation&nbsp;?</h2>
+        <p class="texte-standard-md">
+          La maturité cyber correspond au niveau global de prise en compte des
+          risques numériques dans votre organisation.
+          <br />
+          <br />
+          ⏱️
+          <strong
+            >5 min. seulement pour obtenir une évaluation indicative</strong
+          >
+          et voir où vous vous situez par rapport aux autres organisations ayant
+          déjà réalisé le test de maturité cyber.
         </p>
       </hgroup>
-      <div id="barometre-simplifie" />
+      <lab-anssi-lien
+        href="/test-maturite"
+        apparence="bouton"
+        variante="primaire"
+        taille="md"
+        titre="Débuter le test"
+        position-icone="droite"
+        icone="arrow-right-line"
+      ></lab-anssi-lien>
+      <lab-anssi-lien
+        id="lien-session-groupe"
+        href="/session-groupe"
+        apparence="lien"
+        titre="Disponible aussi pour les sessions en groupe"
+      ></lab-anssi-lien>
+      <p class="texte-mention-xs">
+        La maturité cyber n’est pas une évaluation du niveau de sécurité des
+        systèmes d’information d’une organisation.
+      </p>
+      <div class="barometre">
+        <hgroup>
+          <h6>Baromètre de la maturité cyber</h6>
+          <p class="texte-detail-sm">
+            Répartition de la maturité cyber des organisations sur l’ensemble
+            des tests réalisés.
+          </p>
+        </hgroup>
+        <div id="barometre-simplifie" />
+      </div>
     </div>
   </div>
 </section>
 
 <section class="interlocuteurs">
-  <h2>
-    Trouvez les interlocuteurs et dispositifs pour vous soutenir dans vos
-    efforts.
-  </h2>
-  <lab-anssi-carrousel-tuiles>
-    <dsfr-tile
-      title="Contacts cyber"
-      has-description="true"
-      description="Des contacts cyber de proximité pour vous orienter et répondre à vos questions."
-      href="/contacts"
-      enlarge="true"
-    >
-      <img
-        slot="pictogram"
-        src="/assets/images/trois-mains-croisees.svg"
-        alt="Contacts cyber"
-      />
-    </dsfr-tile>
-    <dsfr-tile
-      title="Prestataires labellisés"
-      has-description="true"
-      description="Tous les prestataires de confiance et produits/services labellisés afin de vous accompagner sur vos différents enjeux cyber : audits, homologations, réponses à incidents..."
-      href="/prestataires-labellises"
-      enlarge="true"
-    >
-      <img
-        slot="pictogram"
-        src="/assets/images/coche-jaune-sur-rond-noir.svg"
-        alt="Prestataires labellisés"
-      />
-    </dsfr-tile>
-    <dsfr-tile
-      title="Financements cyber"
-      has-description="true"
-      description="Bénéficiez d’aides et de subventions pour renforcer la maturité cyber de votre organisation.  "
-      href="/financements"
-      enlarge="true"
-    >
-      <img
-        slot="pictogram"
-        src="/assets/images/pile-de-pieces.svg"
-        alt="Financements cyber"
-      />
-    </dsfr-tile>
-  </lab-anssi-carrousel-tuiles>
+  <div class="contenu-section">
+    <h2>
+      Trouvez les interlocuteurs et dispositifs pour vous soutenir dans vos
+      efforts.
+    </h2>
+    <lab-anssi-carrousel-tuiles>
+      <dsfr-tile
+        title="Contacts cyber"
+        has-description="true"
+        description="Des contacts cyber de proximité pour vous orienter et répondre à vos questions."
+        href="/contacts"
+        enlarge="true"
+      >
+        <img
+          slot="pictogram"
+          src="/assets/images/trois-mains-croisees.svg"
+          alt="Contacts cyber"
+        />
+      </dsfr-tile>
+      <dsfr-tile
+        title="Prestataires labellisés"
+        has-description="true"
+        description="Tous les prestataires de confiance et produits/services labellisés afin de vous accompagner sur vos différents enjeux cyber : audits, homologations, réponses à incidents..."
+        href="/prestataires-labellises"
+        enlarge="true"
+      >
+        <img
+          slot="pictogram"
+          src="/assets/images/coche-jaune-sur-rond-noir.svg"
+          alt="Prestataires labellisés"
+        />
+      </dsfr-tile>
+      <dsfr-tile
+        title="Financements cyber"
+        has-description="true"
+        description="Bénéficiez d’aides et de subventions pour renforcer la maturité cyber de votre organisation.  "
+        href="/financements"
+        enlarge="true"
+      >
+        <img
+          slot="pictogram"
+          src="/assets/images/pile-de-pieces.svg"
+          alt="Financements cyber"
+        />
+      </dsfr-tile>
+    </lab-anssi-carrousel-tuiles>
+  </div>
 </section>
 
 <section class="equipe-bizdev">
