Ajoute les logos des partenaires

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -271,3 +271,33 @@ permalink: /accueil2/
     />
   </div>
 </section>
+
+<section class="partenaires">
+  <div class="contenu-section">
+    <h2>
+      Ils s'engagent pour Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber
+    </h2>
+    <div class="logos">
+      <img
+        src="/assets/images/logo-suite-territoriale.svg"
+        alt="La Suite territoriale"
+        width="220"
+      />
+      <img
+        src="/assets/images/logo-anct.svg"
+        alt="agence nationale de la cohésion des territoires"
+        width="260"
+      />
+      <img
+        src="/assets/images/logo-amf.svg"
+        alt="association des maires de France et des présidents d'intercommunalité"
+        width="163"
+      />
+      <img
+        src="/assets/images/logo-amrf.avif"
+        alt="association des maires ruraux de France"
+        width="150"
+      />
+    </div>
+  </div>
+</section>
