--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -301,3 +301,25 @@ permalink: /accueil2/
     </div>
   </div>
 </section>
+
+<section class="anssi">
+  <div class="contenu-section">
+    <img src="assets/images/logo-anssi.svg" class="logo" alt="ANSSI" />
+    <h2>Qu’est-ce que l’ANSSI&nbsp;?</h2>
+    <p class="texte-standard-md">
+      Créée en 2009, l’Agence nationale de la sécurité des systèmes
+      d’information (ANSSI) est l’autorité nationale en matière de cybersécurité
+      et de cyberdéfense.
+      <br />
+      <br />
+      <strong>
+        Son action pour la protection de la Nation face aux cyberattaques se
+        traduit en quatre grandes missions : défendre, connaître, partager,
+        accompagner.
+      </strong>
+    </p>
+    <a href="https://cyber.gouv.fr/" target="_blank" class="bouton secondaire">
+      Se rendre sur le site de l'ANSSI
+    </a>
+  </div>
+</section>
