[SOIN] Corrige les alertes sonarqube

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -19,7 +19,7 @@ permalink: /accueil2/
       taille="lg"
       titre="Demander un diagnostic gratuit"
     ></lab-anssi-lien>
-    <img src="/assets/images/image-generique.avif" />
+    <img src="/assets/images/image-generique.avif" alt="Temporaire" />
     <p class="texte-detail-sm">
       Découvrez les guides, services et outils gratuits proposés par l'Agence
       nationale de la sécurité des systèmes d'information et ses partenaires
@@ -52,7 +52,10 @@ permalink: /accueil2/
           ransomwares ou rançongiciels.
         </p>
       </hgroup>
-      <img src="/assets/images/illustration-organisations-concernees.svg" />
+      <img
+        src="/assets/images/illustration-organisations-concernees.svg"
+        alt="Organisation concernées"
+      />
       <lab-anssi-lien
         class="texte-mention-xs"
         href="https://cyber.gouv.fr/nous-connaitre/publications/panoramas-de-la-cybermenace/panorama-de-la-cybermenace-2024/"
@@ -196,7 +199,7 @@ permalink: /accueil2/
       <dsfr-tile
         title="Financements cyber"
         has-description="true"
-        description="Bénéficiez d’aides et de subventions pour renforcer la maturité cyber de votre organisation.  "
+        description="Bénéficiez d’aides et de subventions pour renforcer la maturité cyber de votre organisation."
         href="/financements"
         enlarge="true"
       >
@@ -213,10 +216,7 @@ permalink: /accueil2/
 <section class="equipe-bizdev">
   <div class="contenu-section">
     <div class="photos">
-      <img
-        src="/assets/images/floriane-bizdev.jpg"
-        alt="Photo de Floriane Gallego"
-      />
+      <img src="/assets/images/floriane-bizdev.jpg" alt="Floriane Gallego" />
     </div>
     <h2>Notre équipe est à votre écoute</h2>
     <p class="texte-standard-md">
