[ACCUEIL v2] Adapte la disposition aux tablettes

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -22,7 +22,7 @@ permalink: /accueil2/
     <img src="/assets/images/image-generique.avif" alt="Temporaire" />
     <p class="texte-detail-sm">
       Découvrez les guides, services et outils gratuits proposés par l'Agence
-      nationale de la sécurité des systèmes d'information et ses partenaires
+      nationale de la sécurité des systèmes d'information et ses partenaires.
     </p>
   </div>
 </section>
@@ -48,8 +48,7 @@ permalink: /accueil2/
           cyberattaques
         </h2>
         <p class="texte-article-lg">
-          Les TPE/PME/ETI et collectivités sont les principales victimes des
-          ransomwares ou rançongiciels.
+          Les TPE/PME/ETI et collectivités sont les principales victimes des ransomwares ou rançongiciels.
         </p>
       </hgroup>
       <img
@@ -102,11 +101,11 @@ permalink: /accueil2/
         de votre organisation.
       </p>
       <lab-anssi-lien
-        href="/catalogue"
+        href="/catalogue#guides"
         apparence="bouton"
         variante="secondaire"
         taille="md"
-        titre="Accéder au catalogue"
+        titre="Accéder aux guides de l’ANSSI"
       ></lab-anssi-lien>
     </div>
   </div>
@@ -124,7 +123,7 @@ permalink: /accueil2/
           <br />
           ⏱️
           <strong
-            >5 min. seulement pour obtenir une évaluation indicative</strong
+          >5 min. seulement pour obtenir une évaluation indicative</strong
           >
           et voir où vous vous situez par rapport aux autres organisations ayant
           déjà réalisé le test de maturité cyber.
@@ -146,8 +145,8 @@ permalink: /accueil2/
         titre="Disponible aussi pour les sessions en groupe"
       ></lab-anssi-lien>
       <p class="texte-mention-xs">
-        La maturité cyber n’est pas une évaluation du niveau de sécurité des
-        systèmes d’information d’une organisation.
+        La maturité cyber n’est pas une évaluation du niveau de sécurité des systèmes d’information d’une organisation
+        mais de sa posture à l’égard des enjeux cyber.
       </p>
       <div class="barometre">
         <hgroup>
@@ -228,7 +227,7 @@ permalink: /accueil2/
       href="https://app.livestorm.co/lab-anssi/webinaire-cyberdepart"
       variante="primaire"
       apparence="bouton"
-      taille="lg"
+      taille="md"
       cible="_blank"
       titre="Assister au webinaire"
     ></lab-anssi-lien>
@@ -304,22 +303,24 @@ permalink: /accueil2/
 
 <section class="anssi">
   <div class="contenu-section">
-    <img src="assets/images/logo-anssi.svg" class="logo" alt="ANSSI" />
-    <h2>Qu’est-ce que l’ANSSI&nbsp;?</h2>
-    <p class="texte-standard-md">
-      Créée en 2009, l’Agence nationale de la sécurité des systèmes
-      d’information (ANSSI) est l’autorité nationale en matière de cybersécurité
-      et de cyberdéfense.
-      <br />
-      <br />
-      <strong>
-        Son action pour la protection de la Nation face aux cyberattaques se
-        traduit en quatre grandes missions : défendre, connaître, partager,
-        accompagner.
-      </strong>
-    </p>
-    <a href="https://cyber.gouv.fr/" target="_blank" class="bouton secondaire">
-      Se rendre sur le site de l'ANSSI
-    </a>
+    <div class="contenu-anssi">
+      <img src="assets/images/logo-anssi.svg" class="logo" alt="ANSSI" />
+      <h2>Qu’est-ce que l’ANSSI&nbsp;?</h2>
+      <p class="texte-standard-md">
+        Créée en 2009, l’Agence nationale de la sécurité des systèmes
+        d’information (ANSSI) est l’autorité nationale en matière de cybersécurité
+        et de cyberdéfense.
+        <br />
+        <br />
+        <strong>
+          Son action pour la protection de la Nation face aux cyberattaques se
+          traduit en quatre grandes missions : défendre, connaître, partager,
+          accompagner.
+        </strong>
+      </p>
+      <a href="https://cyber.gouv.fr/" target="_blank" class="bouton secondaire">
+        Se rendre sur le site de l'ANSSI
+      </a>
+    </div>
   </div>
 </section>
