[ACCUEIL-V2] Adapte le chapo
...aux grands écrans

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -10,13 +10,13 @@ permalink: /accueil2/
       <h1 class="alternatif-xs">
         Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber
       </h1>
-      <p class="texte-chapo-xl">Agissez pour votre cybersécurité !</p>
+      <p class="texte-chapo-xl">Agissez pour votre cybersécurité&nbsp;!</p>
     </hgroup>
     <lab-anssi-lien
       href="/cyberdepart/"
       apparence="bouton"
       variante="primaire"
-      taille="lg"
+      taille="md"
       titre="Demander un diagnostic gratuit"
     ></lab-anssi-lien>
     <img src="/assets/images/image-generique.avif" alt="Temporaire" />
@@ -48,7 +48,8 @@ permalink: /accueil2/
           cyberattaques
         </h2>
         <p class="texte-article-lg">
-          Les TPE/PME/ETI et collectivités sont les principales victimes des ransomwares ou rançongiciels.
+          Les TPE/PME/ETI et collectivités sont les principales victimes des
+          ransomwares ou rançongiciels.
         </p>
       </hgroup>
       <img
@@ -123,7 +124,7 @@ permalink: /accueil2/
           <br />
           ⏱️
           <strong
-          >5 min. seulement pour obtenir une évaluation indicative</strong
+            >5 min. seulement pour obtenir une évaluation indicative</strong
           >
           et voir où vous vous situez par rapport aux autres organisations ayant
           déjà réalisé le test de maturité cyber.
@@ -145,8 +146,9 @@ permalink: /accueil2/
         titre="Disponible aussi pour les sessions en groupe"
       ></lab-anssi-lien>
       <p class="texte-mention-xs">
-        La maturité cyber n’est pas une évaluation du niveau de sécurité des systèmes d’information d’une organisation
-        mais de sa posture à l’égard des enjeux cyber.
+        La maturité cyber n’est pas une évaluation du niveau de sécurité des
+        systèmes d’information d’une organisation mais de sa posture à l’égard
+        des enjeux cyber.
       </p>
       <div class="barometre">
         <hgroup>
@@ -308,8 +310,8 @@ permalink: /accueil2/
       <h2>Qu’est-ce que l’ANSSI&nbsp;?</h2>
       <p class="texte-standard-md">
         Créée en 2009, l’Agence nationale de la sécurité des systèmes
-        d’information (ANSSI) est l’autorité nationale en matière de cybersécurité
-        et de cyberdéfense.
+        d’information (ANSSI) est l’autorité nationale en matière de
+        cybersécurité et de cyberdéfense.
         <br />
         <br />
         <strong>
@@ -318,7 +320,11 @@ permalink: /accueil2/
           accompagner.
         </strong>
       </p>
-      <a href="https://cyber.gouv.fr/" target="_blank" class="bouton secondaire">
+      <a
+        href="https://cyber.gouv.fr/"
+        target="_blank"
+        class="bouton secondaire"
+      >
         Se rendre sur le site de l'ANSSI
       </a>
     </div>
