[ACCUEIL-V2] Adapte la disposition de la page
...aux grands écrans

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -150,67 +150,69 @@ permalink: /accueil2/
         systèmes d’information d’une organisation mais de sa posture à l’égard
         des enjeux cyber.
       </p>
-      <div class="barometre">
-        <hgroup>
-          <h6>Baromètre de la maturité cyber</h6>
-          <p class="texte-detail-sm">
-            Répartition de la maturité cyber des organisations sur l’ensemble
-            des tests réalisés.
-          </p>
-        </hgroup>
-        <div id="barometre-simplifie" />
-      </div>
+    </div>
+    <div class="barometre">
+      <hgroup>
+        <h6>Baromètre de la maturité cyber</h6>
+        <p class="texte-detail-sm">
+          Répartition de la maturité cyber des organisations sur l’ensemble des
+          tests réalisés.
+        </p>
+      </hgroup>
+      <div id="barometre-simplifie" />
     </div>
   </div>
 </section>
 
 <section class="interlocuteurs">
   <div class="contenu-section">
-    <h2>
-      Trouvez les interlocuteurs et dispositifs pour vous soutenir dans vos
-      efforts.
-    </h2>
-    <lab-anssi-carrousel-tuiles>
-      <dsfr-tile
-        title="Contacts cyber"
-        has-description="true"
-        description="Des contacts cyber de proximité pour vous orienter et répondre à vos questions."
-        href="/contacts"
-        enlarge="true"
-      >
-        <img
-          slot="pictogram"
-          src="/assets/images/trois-mains-croisees.svg"
-          alt="Contacts cyber"
-        />
-      </dsfr-tile>
-      <dsfr-tile
-        title="Prestataires labellisés"
-        has-description="true"
-        description="Tous les prestataires de confiance et produits/services labellisés afin de vous accompagner sur vos différents enjeux cyber : audits, homologations, réponses à incidents..."
-        href="/prestataires-labellises"
-        enlarge="true"
-      >
-        <img
-          slot="pictogram"
-          src="/assets/images/coche-jaune-sur-rond-noir.svg"
-          alt="Prestataires labellisés"
-        />
-      </dsfr-tile>
-      <dsfr-tile
-        title="Financements cyber"
-        has-description="true"
-        description="Bénéficiez d’aides et de subventions pour renforcer la maturité cyber de votre organisation."
-        href="/financements"
-        enlarge="true"
-      >
-        <img
-          slot="pictogram"
-          src="/assets/images/pile-de-pieces.svg"
-          alt="Financements cyber"
-        />
-      </dsfr-tile>
-    </lab-anssi-carrousel-tuiles>
+    <div class="contenu-interlocuteurs">
+      <h2>
+        Trouvez les interlocuteurs et dispositifs pour vous soutenir dans vos
+        efforts.
+      </h2>
+      <lab-anssi-carrousel-tuiles>
+        <dsfr-tile
+          title="Contacts cyber"
+          has-description="true"
+          description="Des contacts cyber de proximité pour vous orienter et répondre à vos questions."
+          href="/contacts"
+          enlarge="true"
+        >
+          <img
+            slot="pictogram"
+            src="/assets/images/trois-mains-croisees.svg"
+            alt="Contacts cyber"
+          />
+        </dsfr-tile>
+        <dsfr-tile
+          title="Prestataires labellisés"
+          has-description="true"
+          description="Tous les prestataires de confiance et produits/services labellisés afin de vous accompagner sur vos différents enjeux cyber&nbsp;: audits, homologations, réponses à incidents..."
+          href="/prestataires-labellises"
+          enlarge="true"
+        >
+          <img
+            slot="pictogram"
+            src="/assets/images/coche-jaune-sur-rond-noir.svg"
+            alt="Prestataires labellisés"
+          />
+        </dsfr-tile>
+        <dsfr-tile
+          title="Financements cyber"
+          has-description="true"
+          description="Bénéficiez d’aides et de subventions pour renforcer la maturité cyber de votre organisation."
+          href="/financements"
+          enlarge="true"
+        >
+          <img
+            slot="pictogram"
+            src="/assets/images/pile-de-pieces.svg"
+            alt="Financements cyber"
+          />
+        </dsfr-tile>
+      </lab-anssi-carrousel-tuiles>
+    </div>
   </div>
 </section>
 
@@ -280,24 +282,29 @@ permalink: /accueil2/
     </h2>
     <div class="logos">
       <img
-        src="/assets/images/logo-suite-territoriale.svg"
-        alt="La Suite territoriale"
-        width="220"
-      />
-      <img
-        src="/assets/images/logo-anct.svg"
-        alt="agence nationale de la cohésion des territoires"
-        width="260"
-      />
-      <img
-        src="/assets/images/logo-amf.svg"
-        alt="association des maires de France et des présidents d'intercommunalité"
-        width="220"
+        src="/assets/images/logo-afcdp.avif"
+        alt="Association Française des Correspondants à la proctection des Données à caractère Personel"
+        width="160"
       />
       <img
         src="/assets/images/logo-amrf.avif"
         alt="association des maires ruraux de France"
+        width="150"
+      />
+      <img
+        src="/assets/images/logo-anct.svg"
+        alt="agence nationale de la cohésion des territoires"
         width="220"
+      />
+      <img
+        src="/assets/images/logo-suite-territoriale.svg"
+        alt="La Suite territoriale"
+        width="170"
+      />
+      <img
+        src="/assets/images/logo-umih.svg"
+        alt="Union des Métiers et des Industries de l'Hôtellerie"
+        width="140"
       />
     </div>
   </div>
