--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -27,6 +27,12 @@ permalink: /accueil2/
   </div>
 </section>
 
+<script type="application/json" id="accueil-donnees-demande-diagnostic">
+  {
+    "origine": "accueil"
+  }
+</script>
+
 <script
   type="module"
   crossorigin
@@ -65,7 +71,7 @@ permalink: /accueil2/
         titre="Panorama de la menace 2024, ANSSI"
       ></lab-anssi-lien>
     </div>
-    <div id="demande-diagnostic"></div>
+    <div id="demande-diagnostic" />
     <div class="acces-catalogue">
       <h2>
         Accédez à un catalogue complet de ressources cyber proposées par l'ANSSI
