[ACCUEIL v2] Corrige l’élément vide
...qui ne fonctionne pas sous firefox et se retrouve à englober l’élément suivant (acces-catalogue) dans le DOM.

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -71,7 +71,7 @@ permalink: /accueil2/
         titre="Panorama de la menace 2024, ANSSI"
       ></lab-anssi-lien>
     </div>
-    <div id="demande-diagnostic" />
+    <div id="demande-diagnostic"></div>
     <div class="acces-catalogue">
       <h2>
         Accédez à un catalogue complet de ressources cyber proposées par l'ANSSI
