[ACCUEIL v2] Illustre le chapeau

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -19,7 +19,7 @@ permalink: /accueil2/
       taille="md"
       titre="Demander un diagnostic gratuit"
     ></lab-anssi-lien>
-    <img src="/assets/images/image-generique.avif" alt="Temporaire" />
+    <img src="/assets/images/illustration-tester.svg" alt="" />
     <p class="texte-detail-sm">
       Découvrez les guides, services et outils gratuits proposés par l'Agence
       nationale de la sécurité des systèmes d'information et ses partenaires.
