Echange les 2 pages d'accueil
...et sers la nouvelle page sur '/'

--- a/front/accueil2.html
+++ b/front/accueil2.html
@@ -1,7 +1,7 @@
 ---
 layout: accueil2
 titreHtml: 'Accueil | MesServicesCyber'
-permalink: /accueil2/
+permalink: /
 ---
 
 <section class="chapeau fond-sombre">
