Ajoute le bouton de redirection vers les guides
...dans le chapeau de l'accueil

--- a/front/accueil.html
+++ b/front/accueil.html
@@ -12,13 +12,18 @@ permalink: /
       </h1>
       <p class="texte-chapo-xl">Agissez pour votre cybersécurité&nbsp;!</p>
     </hgroup>
-    <lab-anssi-lien
-      href="/cyberdepart/"
-      apparence="bouton"
-      variante="primaire"
-      taille="md"
-      titre="Demander un diagnostic gratuit"
-    ></lab-anssi-lien>
+    <div class="actions">
+      <lab-anssi-lien
+        href="/cyberdepart/"
+        apparence="bouton"
+        variante="primaire"
+        taille="md"
+        titre="Demander un diagnostic gratuit"
+      ></lab-anssi-lien>
+      <a href="/catalogue#guides" class="bouton secondaire taille-moyenne">
+        Accéder aux guides de l’ANSSI
+      </a>
+    </div>
     <img src="/assets/images/ecrans-virtuels-avec-femme-au-centre.svg" alt="" />
     <p class="texte-detail-sm">
       Découvrez les guides, services et outils gratuits proposés par l'Agence
